<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fpc.aoc</groupId>
  <artifactId>aoc</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>

  <name>${project.name}</name>

  <properties>
    <project.name>Advent Of Code</project.name>
    <module.name>POM Parent</module.name>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>

    <lombok.version>1.18.30</lombok.version>
    <junit-jupiter.version>5.10.1</junit-jupiter.version>
  </properties>


  <modules>
    <module>fpc.aoc.api</module>
    <module>fpc.aoc.common</module>
    <module>fpc.aoc.computer</module>
    <module>fpc.aoc.robot</module>
    <module>fpc.aoc.input</module>
    <module>fpc.aoc.launcher</module>
    <module>fpc.aoc.year2015</module>
    <module>fpc.aoc.year2019</module>
    <module>fpc.aoc.year2020</module>
    <module>fpc.aoc.year2021</module>
    <module>fpc.aoc.year2022</module>
    <module>fpc.aoc.year2023</module>
    <module>fpc.aoc.year2024</module>
  </modules>


  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>fpc.aoc</groupId>
        <artifactId>aoc-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>fpc.aoc</groupId>
        <artifactId>aoc-input</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>fpc.aoc</groupId>
        <artifactId>aoc-api</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>fpc.aoc</groupId>
        <artifactId>aoc-computer-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>fpc.aoc</groupId>
        <artifactId>aoc-robot</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>fpc.aoc</groupId>
        <artifactId>aoc-computer-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>fpc.aoc</groupId>
        <artifactId>aoc-computer-io</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>fpc.aoc</groupId>
        <artifactId>aoc-computer-primitive</artifactId>
        <version>${project.version}</version>
      </dependency>


      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit-jupiter.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit-jupiter.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.17.2</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>UTF-8</encoding>
          <annotationProcessorPaths>
            <annotationProcessorPath>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </annotationProcessorPath>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.1.2</version>
          <configuration>
            <useModulePath>true</useModulePath>
            <useSystemClassLoader>false</useSystemClassLoader>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>


</project>
